methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:6: error: value to3 is not a member of Int
def moitie() {quart();avance();avance();flower(Color.blue);gauche();avance();avance();droite();quart();for (e<-1 to3){recule();};gauche();recule();recule();droite();}
                                                                                                                 ^